crates/nsl-codegen/tests/snapshots/fused_linear_ce_v1_byte_identity__v1_backward_v4096_h128_t1024.snap
---
source: crates/nsl-codegen/tests/fused_linear_ce_v1_byte_identity.rs
expression: s
---
.version 7.0
.target sm_70
.address_size 64

.visible .entry nsl_fused_linear_ce_backward_f32_v4096_h128(.param .f32 param_grad_output, .param .u64 param_x, .param .u64 param_w, .param .u64 param_bias, .param .u64 param_targets, .param .u64 param_lse, .param .u64 param_dx_out, .param .u64 param_dw_out, .param .u64 param_dbias_out, .param .u32 param_B, .param .u32 param_S, .param .u32 param_V, .param .u32 param_H, .param .u32 param_num_valid) {
    .reg .u32 %r<16>;
    .reg .u64 %rd<13>;
    .reg .f32 %f<7>;
    .reg .pred %p<1>;
    .reg .u32 %edge_r;
    .reg .u64 %edge_rd;
    .reg .f32 %edge_f;
    .reg .f64 %edge_fd;
    .reg .b16 %edge_h;
    .reg .pred %edge_p;
    .reg .b32 %edge_v;

    ld.param.f32 %f0, [param_grad_output];
    ld.param.u64 %rd0, [param_x];
    ld.param.u64 %rd1, [param_w];
    ld.param.u64 %rd2, [param_bias];
    ld.param.u64 %rd3, [param_targets];
    ld.param.u64 %rd4, [param_lse];
    ld.param.u64 %rd5, [param_dx_out];
    ld.param.u64 %rd6, [param_dw_out];
    ld.param.u64 %rd7, [param_dbias_out];
    ld.param.u32 %r0, [param_B];
    ld.param.u32 %r1, [param_S];
    ld.param.u32 %r2, [param_V];
    ld.param.u32 %r3, [param_H];
    ld.param.u32 %r4, [param_num_valid];

BB0:
    cvt.rn.f32.u32 %f1, %r4;
    mov.u32 %r0, %ctaid.x;
    mov.u32 %r1, %tid.x;
    mov.u32 %r2, 0;
    mov.u32 %r3, 1;
    mov.u32 %r4, 128;
    mov.u32 %r5, 128;
    mov.u64 %rd8, 128;
    cvt.u64.u32 %rd9, %r0;
    mul.lo.u64 %rd10, %rd9, %rd8;
    cvt.u64.u32 %rd9, %r0;
    mul.lo.u64 %rd9, %rd9, 8;
    add.u64 %rd9, %rd3, %rd9;
    ld.global.s64 %rd3, [%rd9];
    mov.s64 %rd9, -100;
    setp.eq.s64 %p0, %rd3, %rd9;
    @%p0 bra BB2;
    bra BB1;
BB1:
    cvt.u64.u32 %rd9, %r0;
    mul.lo.u64 %rd9, %rd9, 4;
    add.u64 %rd9, %rd4, %rd9;
    ld.global.f32 %f2, [%rd9];
    div.rn.f32 %f3, %f0, %f1;
    mov.f32 %f0, 0f3F800000;
    mov.u32 %r0, 4096;
    mov.u32 %r6, 1024;
    mov.u32 %r7, 4;
    mov.u32 %r8, 8;
    mov.u32 %r9, %r2;
    bra BB4;
BB2:
    mov.u32 %r10, %r2;
    bra BB14;
BB3:
    ret;
BB4:
    mul.lo.u32 %r11, %r9, %r6;
    mov.u32 %r12, %r2;
    bra BB6;
BB5:
    bra BB3;
BB6:
    mul.lo.u32 %r13, %r12, %r4;
    add.u32 %r14, %r13, %r1;
    add.u32 %r13, %r14, %r11;
    setp.lt.u32 %p0, %r13, %r0;
    @%p0 bra BB8;
    bra BB9;
BB7:
    add.u32 %r14, %r9, %r3;
    setp.lt.u32 %p0, %r14, %r7;
    @%p0 bra BB7_t;
    bra BB5;
BB8:
    cvt.u64.u32 %rd4, %r13;
    mul.lo.u64 %rd9, %rd4, %rd8;
    mov.f32 %f1, 0f00000000;
    mov.u32 %r14, %r2;
    mov.f32 %f4, %f1;
    bra BB10;
BB9:
    add.u32 %r15, %r12, %r3;
    setp.lt.u32 %p0, %r15, %r8;
    @%p0 bra BB9_t;
    bra BB7;
BB10:
    cvt.u64.u32 %rd4, %r14;
    add.u64 %rd11, %rd10, %rd4;
    mov.u64 %rd12, %rd11;
    mul.lo.u64 %rd12, %rd12, 4;
    add.u64 %rd12, %rd0, %rd12;
    ld.global.f32 %f1, [%rd12];
    add.u64 %rd11, %rd9, %rd4;
    mov.u64 %rd4, %rd11;
    mul.lo.u64 %rd4, %rd4, 4;
    add.u64 %rd4, %rd1, %rd4;
    ld.global.f32 %f5, [%rd4];
    fma.rn.f32 %f6, %f1, %f5, %f4;
    add.u32 %r15, %r14, %r3;
    setp.lt.u32 %p0, %r15, %r5;
    @%p0 bra BB10_t;
    bra BB10_f;
BB11:
    cvt.u64.u32 %rd4, %r13;
    mul.lo.u64 %rd4, %rd4, 4;
    add.u64 %rd4, %rd2, %rd4;
    ld.global.f32 %f4, [%rd4];
    add.f32 %f5, %f1, %f4;
    sub.f32 %f1, %f5, %f2;
    mul.f32 %f4, %f1, 0f3FB8AA3B;
    ex2.approx.f32 %f4, %f4;
    cvt.s64.u32 %rd4, %r13;
    setp.eq.s64 %p0, %rd4, %rd3;
    sub.f32 %f1, %f4, %f0;
    selp.f32 %f5, %f1, %f4, %p0;
    mul.f32 %f1, %f5, %f3;
    mov.u32 %r14, %r2;
    bra BB12;
BB12:
    cvt.u64.u32 %rd4, %r14;
    add.u64 %rd11, %rd9, %rd4;
    mov.u64 %rd12, %rd11;
    mul.lo.u64 %rd12, %rd12, 4;
    add.u64 %rd12, %rd1, %rd12;
    ld.global.f32 %f4, [%rd12];
    mul.f32 %f5, %f1, %f4;
    add.u64 %rd12, %rd10, %rd4;
    mov.u64 %rd4, %rd12;
    mul.lo.u64 %rd4, %rd4, 4;
    add.u64 %rd4, %rd5, %rd4;
    red.global.add.f32 [%rd4], %f5;
    mov.u64 %rd4, %rd12;
    mul.lo.u64 %rd4, %rd4, 4;
    add.u64 %rd4, %rd0, %rd4;
    ld.global.f32 %f4, [%rd4];
    mul.f32 %f5, %f1, %f4;
    mov.u64 %rd4, %rd11;
    mul.lo.u64 %rd4, %rd4, 4;
    add.u64 %rd4, %rd6, %rd4;
    red.global.add.f32 [%rd4], %f5;
    add.u32 %r15, %r14, %r3;
    setp.lt.u32 %p0, %r15, %r5;
    @%p0 bra BB12_t;
    bra BB13;
BB13:
    cvt.u64.u32 %rd4, %r13;
    mul.lo.u64 %rd4, %rd4, 4;
    add.u64 %rd4, %rd7, %rd4;
    red.global.add.f32 [%rd4], %f1;
    bra BB9;
BB14:
    mul.lo.u32 %r0, %r10, %r4;
    add.u32 %r2, %r0, %r1;
    setp.lt.u32 %p0, %r2, %r5;
    @%p0 bra BB15;
    bra BB3;
BB15:
    cvt.u64.u32 %rd0, %r2;
    add.u64 %rd1, %rd10, %rd0;
    mov.u64 %rd0, %rd1;
    mul.lo.u64 %rd0, %rd0, 4;
    add.u64 %rd0, %rd5, %rd0;
    mov.f32 %f0, 0f00000000;
    st.global.f32 [%rd0], %f0;
    add.u32 %r0, %r10, %r3;
    mov.u32 %r10, %r0;
    bra BB14;
BB7_t:
    mov.u32 %r9, %r14;
    bra BB4;
BB9_t:
    mov.u32 %r12, %r15;
    bra BB6;
BB10_t:
    mov.u32 %r14, %r15;
    mov.f32 %f4, %f6;
    bra BB10;
BB10_f:
    mov.f32 %f1, %f6;
    bra BB11;
BB12_t:
    mov.u32 %r14, %r15;
    bra BB12;
}
